responsiveness: finished mobile design :hammer:

--- a/home.html
+++ b/home.html
@@ -188,122 +188,114 @@
       <section class="what-to-learn">
         <h3 class="section-title">How will your kids become code champions?</h3>
         <div class="content">
-          <div class="container-list">
-            <!-- ground up -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/ground-up.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">They'll learn from ground up</h4>
+          <!-- ground up -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/ground-up.webp"
+                alt="kids in computer lab"
+              />
             </div>
-
-            <!-- ICT skills -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/ict-skills.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Start with easy ICT skills</h4>
-            </div>
-
-            <!-- growth and development -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/growth.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Have constant growth and development</h4>
-            </div>
+            <h4 class="sub-title">They'll learn from ground up</h4>
           </div>
 
-          <div class="container-list">
-            <!-- Logical thinking -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/logical.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Enhance their logical thinking</h4>
+          <!-- ICT skills -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/ict-skills.webp"
+                alt="kids in computer lab"
+              />
             </div>
-
-            <!-- Problem Solving -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/problem-solve.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Increase problem-solving skills</h4>
-            </div>
-
-            <!-- Mentor Support -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/ict-skills.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Have strong mentor support</h4>
-            </div>
+            <h4 class="sub-title">Start with easy ICT skills</h4>
           </div>
 
-          <div class="container-list">
-            <!-- curriculum -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/curriculum.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">
-                They'll have a curriculum centric module
-              </h4>
+          <!-- growth and development -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/growth.webp"
+                alt="kids in computer lab"
+              />
             </div>
+            <h4 class="sub-title">Have constant growth and development</h4>
+          </div>
 
-            <!-- progress -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/track.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">
-                Would have visible progress as it would be tracked
-              </h4>
+          <!-- Logical thinking -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/logical.webp"
+                alt="kids in computer lab"
+              />
             </div>
+            <h4 class="sub-title">Enhance their logical thinking</h4>
+          </div>
 
-            <!-- Innovate -->
-            <div class="content-list">
-              <div class="content-list-img-div">
-                <img
-                  class="content-list-image"
-                  src="./images/innovate.webp"
-                  alt="kids in computer lab"
-                />
-              </div>
-              <h4 class="sub-title">Work on real life projects</h4>
+          <!-- Problem Solving -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/problem-solve.webp"
+                alt="kids in computer lab"
+              />
             </div>
+            <h4 class="sub-title">Increase problem-solving skills</h4>
+          </div>
+
+          <!-- Mentor Support -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/ict-skills.webp"
+                alt="kids in computer lab"
+              />
+            </div>
+            <h4 class="sub-title">Have strong mentor support</h4>
+          </div>
+
+          <!-- curriculum -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/curriculum.webp"
+                alt="kids in computer lab"
+              />
+            </div>
+            <h4 class="sub-title">They'll have a curriculum centric module</h4>
+          </div>
+
+          <!-- progress -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/track.webp"
+                alt="kids in computer lab"
+              />
+            </div>
+            <h4 class="sub-title">
+              Would have visible progress as it would be tracked
+            </h4>
+          </div>
+
+          <!-- Innovate -->
+          <div class="content-list">
+            <div class="content-list-img-div">
+              <img
+                class="content-list-image"
+                src="./images/innovate.webp"
+                alt="kids in computer lab"
+              />
+            </div>
+            <h4 class="sub-title">Work on real life projects</h4>
           </div>
         </div>
       </section>
