website upload to git :hammer:

--- a/home.html
+++ b/home.html
@@ -40,11 +40,12 @@
             Today!
           </h1>
           <p class="heading-subtitle">
-            Equipping kids with tech skills is how we help shape Tomorrow Today
+            Equipping kids with tech skills is how we help shape their Tomorrow
+            Today!
             <br />
-            <br />
+            <!-- <br />
             We help kids master cutting-edge technologies in-depth in a fun and
-            challenging way
+            challenging way -->
           </p>
 
           <button class="cta-btn">Book Demo Class</button>
