update: updates te css of the app :hammer:

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>code champions</title>
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/2.3.0/css/reset.min.css"
@@ -18,32 +18,34 @@
     />
   </head>
   <body>
-    <!-- header -->
-    <header>
-      <div class="navbar">
-        <div class="logo-div">
-          <div>
-            <h1 class="logo-text">code champions &#174;</h1>
-          </div>
-        </div>
-        <button class="cta-btn">Book Demo Class</button>
-      </div>
-    </header>
-    <!-- main body -->
     <main class="container">
+      <!-- header -->
+      <header>
+        <div class="navbar">
+          <div class="logo-div">
+            <div>
+              <h1 class="logo-text">code champions &#174;</h1>
+            </div>
+          </div>
+          <button class="cta-btn">Book Demo Class</button>
+        </div>
+      </header>
+      <!-- main body -->
+
       <section class="jumbotron width-80">
         <div class="jumbotron-text">
           <h1 class="title">
             Shaping <br />
-            Tomorrow <br />
-            Today
+            <span class="title-space">Tomorrow</span> <br />
+            Today!
           </h1>
           <p class="heading-subtitle">
-            Equipping kids with tech skills is how we help shape Tomorrow Today
+            Equipping kids with tech skills is how we help shape their Tomorrow
+            Today!
             <br />
-            <br />
+            <!-- <br />
             We help kids master cutting-edge technologies in-depth in a fun and
-            challenging way
+            challenging way -->
           </p>
 
           <button class="cta-btn">Book Demo Class</button>
@@ -63,7 +65,8 @@
           <!-- should have a background image -->
           <h3 class="section-title">Who are we?</h3>
           <p class="heading-subtitle">
-            We are an ICT training company that help transform kids into
+            We are an ICT training campaign empowered by VDesigns Heritage that
+            help transform kids into
             <strong>Code Champions</strong> by teaching them coding through a
             fun and intuitive way.
           </p>
@@ -71,6 +74,23 @@
             We train kids in the following course programs:
           </p>
           <div class="card-section">
+            <!-- Foundation Class -->
+            <div class="card-container green">
+              <div class="card-content">
+                <h3 class="card-title">ICT Foundations</h3>
+                <div class="card-img-div">
+                  <img
+                    class="card-image"
+                    src="./images/webdev.webp"
+                    alt="kids in computer lab"
+                  />
+                </div>
+              </div>
+              <div class="card-cta">
+                <button class="card-button green">Book Demo class</button>
+              </div>
+            </div>
+            <!-- end Foundation -->
             <!-- web dev -->
             <div class="card-container blue">
               <div class="card-content">
